 |                                                                            |
 |                               CHANGES                                      |
 |                                                                            |
 +----------------------------------------------------------------------------*/
 
 v0.9
 ------
 	* 
 	* 

 v0.2
 ------
	* Added support for multi-aliases such as A2,5,6.
 	* Completely rewrote way of handling control table's, reduced 
 	  from ~350 lines of code to about 50.
	* Added configuration option to choose how many modules appear 
	  per line on control page.
	* Added dim/bright click controls to intensity table
 	* Added native support for CM17A devices
 	* Added security level's for password protection 
 	  (none, admin & everything)
 	* Added an auto-refresh setting to the frontend
 	* Heyu now automatically reload's when changes are made to it's settings
 	* Bug correction with START and STOP for Heyu when on error.php
 	* Fixed some error handling bugs
 	* Fixed various other minor bugs
 	* Changed theme icons. Now currently uses icons from the
 	  Crystal icon pack (http://www.everaldo.com/crystal/)
 	  by Everaldo Coelho which are licensed under the LGPL.
	* Added Italian translation
	  Thanks to Stefano Bodini
 	* Added Swedish translation
 	  Thanks to Tobias Axelsson
 	* Updated Dutch translation
 	  Thanks to Frank

 v0.1.1 (bug fixes, no new features) - 23/Sep/2007
 ------
 	* Disabled 'short_open_tag' for security reason's
 	  Thanks to Julien Touche for pointing this out
 	* Added Dutch translation
 	  Thanks to Frank
 	* Added French translation
 	  Thanks to 'Child from Korn' and Thierry Moutet
 	* Fixed various PHP warning messages.
 	* Added more error handling code
 	* Changed languages dropdown so that full names are given instead of ie: en_GB
 	* Fixed IE CSS bugs
 	* Implemented a different solution for checking if Heyu is running.
 	  Thanks again to Julien Touche.