@@ -1,0 +1,19 @@
+<div id="module">
+<table cellspacing="0" cellpadding="0" border="1" class="module">
+<tr>
+<td width="17" valign="top" class="off">multi</td>
+<td width="110px" rowspan="2"><input type="text" value="<?php echo $label; ?>" class="module"  /></td>
+<td>on</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>off</td>
+</tr>
+</table>
+</div>
+
+<!-- 
+<a href="<?php echo $_SERVER['PHP_SELF']; ?>?action=<?php echo $action; ?>&code=<?php echo $code; ?>&page=<?php echo $page; ?>">
+<img src="<?php echo $config['url_path']; ?>/theme/<?php echo $config['theme']; ?>/images/switch_<?php echo $state; ?>.gif" border="0" />
+</a>
+-->
