@@ -233,199 +233,3 @@ h6 {
 	font-size: 11px;
 	font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
-/******* OLDs ********************************************************/
-
-/*
-div#footer img {
-	vertical-align: middle;
-}
-
-div#footer table {
-	color: #666;
-	font-size: 10px;
-}
-
-div#footer a {
-	color: #666;
-	text-decoration: none;
-	border-bottom: 1px dotted #666;
-}
-
-div#footer a:hover {
-	color: #999;
-	text-decoration: none;
-	border-bottom: 1px dotted #999;
-}
-
-div#help {
-	/*float: right;*/
-	padding-left: 4px;
-}
-*/
-
-
-/*** TABLES ***/
-
-/*
-.aliases a {
-	color: #666;
-	display: block;
-	border: 1px solid #ccc;
-	text-decoration: none;
-}
-
-.aliases a:hover {
-	color: #666;
-	display: block;
-	border: 1px solid #ccc;
-	text-decoration: none;
-	background-color: #ccc;
-}
-
-.aliases td {
-	padding-left: 4px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-
-.tb_buttons {
-	margin-top: 10px;
-	border: 1px solid #ccc;
-	width: 480px;
-	height: 30px;
-	text-align: right;
-	padding-right: 4px;
-}
-
-.cell_center {
-	text-align: center;
-}
-
-.dim_off {
-	width: 20px;
-}
-
-.dim_off a {
-	display: block;
-	text-decoration: none;
-}
-
-.dim_on {
-	width: 20px;
-	background-color: yellow;
-}
-
-.dim_on a {
-	display: block;
-	text-decoration: none;
-}
-*/
-
-/*** HEADINGS ***/
-
-/*
-h1 {
-	font-size: 16px;
-	padding-top: 15px;
-	padding-bottom: 2px;
-	border-bottom: 2px solid #666;
-	margin-bottom: 10px;
-}
-
-h2 {
-	font-size: 14px;
-	padding-top: 4px;
-	padding-bottom: 2px;
-	border-bottom: 1px dotted #666666;
-	margin-bottom: 6px;
-}
-
-h3, h4, h5, h6 {
-	font-size: 12px;
-	padding-top: 4px;
-	padding-bottom: 2px;
-	border-bottom: 1px solid #666666;
-	margin-bottom: 6px;
-	font-style: bold;
-}
-*/
-
-/*** OTHER ***/
-/*
-.spacer {
-	padding-top: 15px;
-}
-
-.ctrlbox_label_on {
-	width: 120px;
-	margin-left: 6px;
-	background-color: #b9dbe6;
-	border-top: 1px solid #6e6e6e;
-	border-left: 1px solid #909090;
-	border-bottom: 1px solid #fff;
-	border-right: 1px solid #fff;
-	color: #2e5174;
-	font-size: 10px;
-	font-weight: bold;
-	text-align: center;
-}
-
-.ctrlbox_label_off {
-	width: 120px;
-	margin-left: 6px;
-	background-color: #ccc;
-	border-top: 1px solid #6e6e6e;
-	border-left: 1px solid #909090;
-	border-bottom: 1px solid #fff;
-	border-right: 1px solid #fff;
-	color: #2e5174;
-	font-size: 10px;
-	font-weight: bold;
-	text-align: center;
-}
-
-.ctrlbox_lights_label_on {
-	width: 210px;
-	margin-left: 6px;
-	background-color: #b9dbe6;
-	border-top: 1px solid #6e6e6e;
-	border-left: 1px solid #909090;
-	border-bottom: 1px solid #fff;
-	border-right: 1px solid #fff;
-	color: #2e5174;
-	font-size: 10px;
-	font-weight: bold;
-	text-align: center;
-}
-
-.ctrlbox_lights_label_off {
-	width: 210px;
-	margin-left: 6px;
-	background-color: #ccc;
-	border-top: 1px solid #6e6e6e;
-	border-left: 1px solid #909090;
-	border-bottom: 1px solid #fff;
-	border-right: 1px solid #fff;
-	color: #2e5174;
-	font-size: 10px;
-	font-weight: bold;
-	text-align: center;
-}
-
-.dimmer {
-	margin-left: 4px;
-}
-
-.code {
-	font-family: Courier;
-}
-*/
