@@ -7,7 +7,8 @@
  v0.9
  ------
  	* 
- 	* 
+ 	* New email. Please use istvan.cebrian -at- domus.link.co.pt for any matter
+ 	  related to domus.Link.
 
  v0.2
  ------
